--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vaktija",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "version": "1.0.1",
+  "author": "Mohammad mrad",
+  "homepage": "http://themd.net/",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
