--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vaktija",
+  "name": "prayer-times",
   "version": "1.0.1",
   "author": "Mohammad mrad",
   "homepage": "http://themd.net/",
